@@ -1182,18 +1182,18 @@ public:
 /// tensor corresponding to the local contribution to a form from
 /// the integral over a cell.
 
-class UFC_PoissonBilinearForm_cell_integral_0: public ufc::cell_integral
+class UFC_PoissonBilinearForm_cell_integral_0_tensor: public ufc::cell_integral
 {
 public:
 
   /// Constructor
-  UFC_PoissonBilinearForm_cell_integral_0() : ufc::cell_integral()
+  UFC_PoissonBilinearForm_cell_integral_0_tensor() : ufc::cell_integral()
   {
     // Do nothing
   }
 
   /// Destructor
-  virtual ~UFC_PoissonBilinearForm_cell_integral_0()
+  virtual ~UFC_PoissonBilinearForm_cell_integral_0_tensor()
   {
     // Do nothing
   }
@@ -1224,63 +1224,71 @@ public:
     // Set scale factor
     const double det = std::abs(detJ);
     
+    // Number of operations to compute element tensor = 39
+    // Compute geometry tensors
+    // Number of operations to compute declarations = 16
+    const double G0_0_0 = det*(Jinv_00*Jinv_00 + Jinv_01*Jinv_01);
+    const double G0_0_1 = det*(Jinv_00*Jinv_10 + Jinv_01*Jinv_11);
+    const double G0_1_0 = det*(Jinv_10*Jinv_00 + Jinv_11*Jinv_01);
+    const double G0_1_1 = det*(Jinv_10*Jinv_10 + Jinv_11*Jinv_11);
     
-    // Compute element tensor (using quadrature representation, optimisation level 2)
-    // Total number of operations to compute element tensor (from this point): 69
-    
+    // Compute element tensor
+    // Number of operations to compute tensor = 23
+    A[0] += 0.5*G0_0_0 + 0.5*G0_0_1 + 0.5*G0_1_0 + 0.5*G0_1_1;
+    A[1] += -0.5*G0_0_0 - 0.5*G0_1_0;
+    A[2] += -0.5*G0_0_1 - 0.5*G0_1_1;
+    A[3] += -0.5*G0_0_0 - 0.5*G0_0_1;
+    A[4] += 0.5*G0_0_0;
+    A[5] += 0.5*G0_0_1;
+    A[6] += -0.5*G0_1_0 - 0.5*G0_1_1;
+    A[7] += 0.5*G0_1_0;
+    A[8] += 0.5*G0_1_1;
+  }
+
+};
+
+/// This class defines the interface for the tabulation of the cell
+/// tensor corresponding to the local contribution to a form from
+/// the integral over a cell.
+
+class UFC_PoissonBilinearForm_cell_integral_0: public ufc::cell_integral
+{
+private:
+
+  UFC_PoissonBilinearForm_cell_integral_0_tensor integral_0_tensor;
+
+public:
+
+  /// Constructor
+  UFC_PoissonBilinearForm_cell_integral_0() : ufc::cell_integral()
+  {
+    // Do nothing
+  }
+
+  /// Destructor
+  virtual ~UFC_PoissonBilinearForm_cell_integral_0()
+  {
+    // Do nothing
+  }
+
+  /// Tabulate the tensor for the contribution from a local cell
+  virtual void tabulate_tensor(double* A,
+                               const double * const * w,
+                               const ufc::cell& c) const
+  {
     // Reset values of the element tensor block
-    for (unsigned int j = 0; j < 3; j++)
-    {
-      for (unsigned int k = 0; k < 3; k++)
-      {
-        A[j*3 + k] = 0;
-      }// end loop over 'k'
-    }// end loop over 'j'
+    A[0] = 0;
+    A[1] = 0;
+    A[2] = 0;
+    A[3] = 0;
+    A[4] = 0;
+    A[5] = 0;
+    A[6] = 0;
+    A[7] = 0;
+    A[8] = 0;
     
-    // Array of quadrature weights (tensor/monomial term 0)
-    const static double W0 = 0.5;
-    
-    const static double P_t0_p1_s1[1][2] = \
-    {{-1, 1}};
-    // Array of non-zero columns
-    static const unsigned int nzc0[2] = {0, 2};
-    // Array of non-zero columns
-    static const unsigned int nzc1[2] = {0, 1};
-    
-    // Number of operations to compute geometry constants = 18
-    const double G0 = Jinv_00*Jinv_10*W0*det;
-    const double G1 = Jinv_01*Jinv_11*W0*det;
-    const double G2 = Jinv_00*Jinv_00*W0*det;
-    const double G3 = Jinv_01*Jinv_01*W0*det;
-    const double G4 = Jinv_10*Jinv_10*W0*det;
-    const double G5 = Jinv_11*Jinv_11*W0*det;
-    
-    // Loop quadrature points (tensor/monomial terms (0,))
-    // Number of operations to compute element tensor for following IP loop = 51
-    // Only 1 integration point, omitting IP loop.
-    
-    // Number of operations to compute declarations = 3
-    const double Gip0 = G0 + G1;
-    const double Gip1 = G2 + G3;
-    const double Gip2 = G4 + G5;
-    
-    // Loop primary indices.
-    // Number of operations for primary indices = 48
-    for (unsigned int j = 0; j < 2; j++)
-    {
-      for (unsigned int k = 0; k < 2; k++)
-      {
-        // Number of operations to compute entry = 3
-        A[nzc1[j]*3 + nzc0[k]] += P_t0_p1_s1[0][j]*P_t0_p1_s1[0][k]*Gip0;
-        // Number of operations to compute entry = 3
-        A[nzc1[j]*3 + nzc1[k]] += P_t0_p1_s1[0][j]*P_t0_p1_s1[0][k]*Gip1;
-        // Number of operations to compute entry = 3
-        A[nzc0[j]*3 + nzc0[k]] += P_t0_p1_s1[0][j]*P_t0_p1_s1[0][k]*Gip2;
-        // Number of operations to compute entry = 3
-        A[nzc0[j]*3 + nzc1[k]] += P_t0_p1_s1[0][j]*P_t0_p1_s1[0][k]*Gip0;
-      }// end loop over 'k'
-    }// end loop over 'j'
-    
+    // Add all contributions to element tensor
+    integral_0_tensor.tabulate_tensor(A, w, c);
   }
 
 };
@@ -1319,7 +1327,7 @@ public:
   /// Return a string identifying the form
   virtual const char* signature() const
   {
-    return "(dXa0[0, 1]/dxb0[0, 1])(dXa1[0, 1]/dxb0[0, 1]) | ((d/dXa0[0, 1])vi0[0, 1, 2])*((d/dXa1[0, 1])vi1[0, 1, 2])*dX(0)";
+    return "Form([Integral(IndexSum(Product(Indexed(ComponentTensor(SpatialDerivative(BasisFunction(FiniteElement('Lagrange', Cell('triangle', 1), 1), 0), MultiIndex((Index(0),))), MultiIndex((Index(0),))), MultiIndex((Index(1),))), Indexed(ComponentTensor(SpatialDerivative(BasisFunction(FiniteElement('Lagrange', Cell('triangle', 1), 1), 1), MultiIndex((Index(2),))), MultiIndex((Index(2),))), MultiIndex((Index(1),)))), MultiIndex((Index(1),))), Measure('cell', 0, {'ffc_representation': 'tensor', 'quadrature_order': 2}))])";
   }
 
   /// Return the rank of the global tensor (r)
@@ -2572,18 +2580,18 @@ public:
 /// tensor corresponding to the local contribution to a form from
 /// the integral over a cell.
 
-class UFC_PoissonLinearForm_cell_integral_0: public ufc::cell_integral
+class UFC_PoissonLinearForm_cell_integral_0_tensor: public ufc::cell_integral
 {
 public:
 
   /// Constructor
-  UFC_PoissonLinearForm_cell_integral_0() : ufc::cell_integral()
+  UFC_PoissonLinearForm_cell_integral_0_tensor() : ufc::cell_integral()
   {
     // Do nothing
   }
 
   /// Destructor
-  virtual ~UFC_PoissonLinearForm_cell_integral_0()
+  virtual ~UFC_PoissonLinearForm_cell_integral_0_tensor()
   {
     // Do nothing
   }
@@ -2610,53 +2618,58 @@ public:
     // Set scale factor
     const double det = std::abs(detJ);
     
+    // Number of operations to compute element tensor = 18
+    // Compute geometry tensors
+    // Number of operations to compute declarations = 3
+    const double G0_0 = det*w[0][0];
+    const double G0_1 = det*w[0][1];
+    const double G0_2 = det*w[0][2];
     
-    // Compute element tensor (using quadrature representation, optimisation level 2)
-    // Total number of operations to compute element tensor (from this point): 56
-    
+    // Compute element tensor
+    // Number of operations to compute tensor = 15
+    A[0] += 0.0833333333333332*G0_0 + 0.0416666666666666*G0_1 + 0.0416666666666666*G0_2;
+    A[1] += 0.0416666666666666*G0_0 + 0.0833333333333332*G0_1 + 0.0416666666666666*G0_2;
+    A[2] += 0.0416666666666666*G0_0 + 0.0416666666666666*G0_1 + 0.0833333333333332*G0_2;
+  }
+
+};
+
+/// This class defines the interface for the tabulation of the cell
+/// tensor corresponding to the local contribution to a form from
+/// the integral over a cell.
+
+class UFC_PoissonLinearForm_cell_integral_0: public ufc::cell_integral
+{
+private:
+
+  UFC_PoissonLinearForm_cell_integral_0_tensor integral_0_tensor;
+
+public:
+
+  /// Constructor
+  UFC_PoissonLinearForm_cell_integral_0() : ufc::cell_integral()
+  {
+    // Do nothing
+  }
+
+  /// Destructor
+  virtual ~UFC_PoissonLinearForm_cell_integral_0()
+  {
+    // Do nothing
+  }
+
+  /// Tabulate the tensor for the contribution from a local cell
+  virtual void tabulate_tensor(double* A,
+                               const double * const * w,
+                               const ufc::cell& c) const
+  {
     // Reset values of the element tensor block
-    for (unsigned int j = 0; j < 3; j++)
-    {
-      A[j] = 0;
-    }// end loop over 'j'
+    A[0] = 0;
+    A[1] = 0;
+    A[2] = 0;
     
-    // Array of quadrature weights (tensor/monomial term 0)
-    const static double W0[4] = {0.159020690871988, 0.0909793091280112, 0.159020690871988, 0.0909793091280112};
-    
-    const static double P_t0_p0[4][3] = \
-    {{0.666390246014701, 0.178558728263616, 0.155051025721682},
-    {0.280019915499074, 0.0750311102226081, 0.644948974278318},
-    {0.178558728263616, 0.666390246014701, 0.155051025721682},
-    {0.0750311102226081, 0.280019915499074, 0.644948974278318}};
-    
-    
-    // Loop quadrature points (tensor/monomial terms (0,))
-    // Number of operations to compute element tensor for following IP loop = 56
-    for (unsigned int ip = 0; ip < 4; ip++)
-    {
-      
-      // Declare function values.
-      double F0 = 0;
-      
-      // Compute function values.
-      // Number of operations to compute values = 6
-      for (unsigned int r = 0; r < 3; r++)
-      {
-        F0 += P_t0_p0[ip][r]*w[0][r];
-      }// end loop over 'r'
-      
-      // Number of operations to compute declarations = 2
-      const double Gip0 = F0*W0[ip]*det;
-      
-      // Loop primary indices.
-      // Number of operations for primary indices = 6
-      for (unsigned int j = 0; j < 3; j++)
-      {
-        // Number of operations to compute entry = 2
-        A[j] += P_t0_p0[ip][j]*Gip0;
-      }// end loop over 'j'
-      
-    }// end loop over 'ip'
+    // Add all contributions to element tensor
+    integral_0_tensor.tabulate_tensor(A, w, c);
   }
 
 };
@@ -2695,7 +2708,7 @@ public:
   /// Return a string identifying the form
   virtual const char* signature() const
   {
-    return "w0_a0[0, 1, 2] | vi0[0, 1, 2]*va0[0, 1, 2]*dX(0)";
+    return "Form([Integral(Product(BasisFunction(FiniteElement('Lagrange', Cell('triangle', 1), 1), 0), Function(FiniteElement('Lagrange', Cell('triangle', 1), 1), 0)), Measure('cell', 0, {'ffc_representation': 'tensor', 'quadrature_order': 1}))])";
   }
 
   /// Return the rank of the global tensor (r)
@@ -2787,118 +2800,118 @@ public:
 #include <dolfin/function/Function.h>
 #include <dolfin/function/FunctionSpace.h>
 
-    class PoissonBilinearFormFunctionSpace0 : public dolfin::FunctionSpace
-    {
-    public:
+class PoissonBilinearFormFunctionSpace0 : public dolfin::FunctionSpace
+{
+public:
 
-      PoissonBilinearFormFunctionSpace0(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+  PoissonBilinearFormFunctionSpace0(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
 
-    };
-    
-    class PoissonBilinearFormFunctionSpace1 : public dolfin::FunctionSpace
-    {
-    public:
+};
 
-      PoissonBilinearFormFunctionSpace1(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+class PoissonBilinearFormFunctionSpace1 : public dolfin::FunctionSpace
+{
+public:
 
-    };
-    
-    class PoissonLinearFormFunctionSpace0 : public dolfin::FunctionSpace
-    {
-    public:
+  PoissonBilinearFormFunctionSpace1(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
 
-      PoissonLinearFormFunctionSpace0(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+};
 
-    };
-    
-    class PoissonLinearFormCoefficientSpace0 : public dolfin::FunctionSpace
-    {
-    public:
+class PoissonLinearFormFunctionSpace0 : public dolfin::FunctionSpace
+{
+public:
 
-      PoissonLinearFormCoefficientSpace0(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+  PoissonLinearFormFunctionSpace0(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
 
-    };
-    
-    class PoissonTestSpace : public dolfin::FunctionSpace
-    {
-    public:
+};
 
-      PoissonTestSpace(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+class PoissonLinearFormCoefficientSpace0 : public dolfin::FunctionSpace
+{
+public:
 
-    };
-    
-    class PoissonTrialSpace : public dolfin::FunctionSpace
-    {
-    public:
+  PoissonLinearFormCoefficientSpace0(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
 
-      PoissonTrialSpace(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+};
 
-    };
-    
-    class PoissonCoefficientSpace : public dolfin::FunctionSpace
-    {
-    public:
+class PoissonTestSpace : public dolfin::FunctionSpace
+{
+public:
 
-      PoissonCoefficientSpace(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+  PoissonTestSpace(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
 
-    };
-    
-    class PoissonFunctionSpace : public dolfin::FunctionSpace
-    {
-    public:
+};
 
-      PoissonFunctionSpace(const dolfin::Mesh& mesh)
-        : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
-                                boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
-                                boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
-      {
-        // Do nothing
-      }
+class PoissonTrialSpace : public dolfin::FunctionSpace
+{
+public:
 
-    };
-    
+  PoissonTrialSpace(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
+
+};
+
+class PoissonCoefficientSpace : public dolfin::FunctionSpace
+{
+public:
+
+  PoissonCoefficientSpace(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
+
+};
+
+class PoissonFunctionSpace : public dolfin::FunctionSpace
+{
+public:
+
+  PoissonFunctionSpace(const dolfin::Mesh& mesh)
+    : dolfin::FunctionSpace(boost::shared_ptr<const dolfin::Mesh>(&mesh, dolfin::NoDeleter<const dolfin::Mesh>()),
+                            boost::shared_ptr<const dolfin::FiniteElement>(new dolfin::FiniteElement(boost::shared_ptr<ufc::finite_element>(new UFC_PoissonLinearForm_finite_element_1()))),
+                            boost::shared_ptr<const dolfin::DofMap>(new dolfin::DofMap(boost::shared_ptr<ufc::dof_map>(new UFC_PoissonLinearForm_dof_map_1()), mesh)))
+  {
+    // Do nothing
+  }
+
+};
+
 class PoissonBilinearForm : public dolfin::Form
 {
 public:
